# hse-2023-db-project-seminar

./: CMakeLists.txt  entities.sql  generator.py  postgres.md
src/: 01-connection-to-db.cpp  02-connection-via-environs.cpp  03-first-query.cpp  04-first-select.cpp  05-insert-and-transaction.cpp  06-exerc.cpp
src/models/: item.h  manufacturer.h  order.h  user.h
